css/input.css
/* ... */
.acf-google-map.active .has-value { display: block; }
.acf-google-map.active .no-value { display: none; }

.acf-google-map .title h4,
.acf-google-map .title input[type="text"] {
	margin: 0;
	font-size: 12px;
	line-height: 16px;
	padding: 10px;
	border: 0 none;
	box-shadow: none;
	border-radius: 0;
	font-family: inherit;
	cursor: text;
}

.acf-google-map .title input[type="text"] {
	height: 36px;
	line-height: normal;
}

.acf-google-map .title .search {
	height: auto;
	border: 0 none;
}

.acf-google-map .acf-sprite-delete,
.acf-google-map .acf-sprite-locate {
	right: 7px;
	top: 7px;
	position: absolute;
	border: 5px solid transparent;
}

.acf-google-map .acf-sprite-delete {
	border: 6px solid transparent;
}

.acf-google-map .canvas {
	height: 400px;
}

.pac-container {
	margin-left: -1px;
	margin-top: -1px;
	padding: 5px 0;
	border-color: #DFDFDF;
}

.pac-container:after {
	display: none;
}

.pac-container .pac-item {
	padding: 5px;
	margin: 0 5px;
}


/*--------------------------------------------------------------------------
*
*	Relationship
*	
*-------------------------------------------------------------------------*/

.acf-relationship {
	
}

.acf-relationship .filters {
	border: #DFDFDF solid 1px;
	background: #fff;
}

.acf-relationship .filters li {
	
}

.acf-relationship .filters li input,
.acf-relationship .filters li select {
	height: 28px;
    line-height: 28px;
	padding: 2px;	
}

.acf-relationship .filters li input {
	border-color: transparent;
	box-shadow: none;
}

.acf-relationship .filters li .inner {
	padding: 7px 7px 7px 0;
	margin: 0;
}

.acf-relationship .filters li:first-child .inner {
	padding-left: 5px;
}

.acf-relationship .filters .filter {
	margin: 0;
	float: none;
}

.acf-relationship .filters .filter:focus,
.acf-relationship .filters .filter:active {
	outline: none;
	box-shadow: none;
}

.acf-relationship .selection {
	border: #DFDFDF solid 1px;
	position: relative;
	margin-top: -1px;
}

.acf-relationship .values,
.acf-relationship .choices {
	width: 50%;
	background: #fff;
	float: left
}

.acf-relationship .choices {
	background: #F9F9F9;
}

.acf-relationship .choices .list {
	border-right: #DFDFDF solid 1px;
	overflow: auto;
}

.acf-relationship .list {
	margin: 0;
	padding: 5px;
	height: 160px;
}

.acf-relationship .list .acf-relationship-label,
.acf-relationship .list .acf-relationship-item,
.acf-relationship .list p {
	padding: 5px 7px;
	margin: 0;
	display: block;
	position: relative;
}

.acf-relationship .list ul {
	padding-bottom: 5px;
}

.acf-relationship .list ul .acf-relationship-item{
	padding-left: 20px;
}

.acf-relationship .list .acf-relationship-label {
	font-weight: bold;
}

.acf-relationship .list .acf-relationship-item {
	color: #333;
	cursor: pointer;
}

.acf-relationship .values .list .acf-relationship-item {
	cursor: move;
}

.acf-relationship .list .acf-relationship-item .match {
	text-decoration: underline;
}

.acf-relationship .list .acf-relationship-item .thumbnail {
	background: #DFDFDF;
	width: 17px;
	height: 17px;
	float: left;
	margin: 0 5px 0 0;
}

.acf-relationship .list .acf-relationship-item .thumbnail img {
	width: 17px;
	height: 17px;
}

.acf-relationship .choices .list .acf-relationship-item:hover {
	background: #3875D7;
	color: #fff;
}

.acf-relationship .values .list .acf-relationship-item:hover {
	background: #EAF2FA;
}

.acf-relationship .values .acf-icon {
	position: absolute;
	top: 1px;
	right: 4px;
	display: none;
}

.acf-relationship .values .acf-relationship-item:hover .acf-icon {
	display: block;
}


/* disabled */
.acf-relationship .list .acf-relationship-item.disabled {
	opacity: 0.5;
}

.acf-relationship .list .acf-relationship-item.disabled:hover {
	opacity: 0.5;
	background: transparent;
	color: #333;
	cursor: default;
}


/*--------------------------------------------------------------------------
*
*	WYSIWYG
*	
*-------------------------------------------------------------------------*/

.acf-wysiwyg-wrap {
	
}

.acf-wysiwyg-wrap iframe{ 
	min-height: 250px;
}

.acf-wysiwyg-wrap .wp-editor-container{ 
	border: 1px solid #E5E5E5;
	box-shadow: none;
}

#mce_fullscreen_container {
	z-index: 150005 !important;
}


/*---------------------------------------------------------------------------------------------
*
*	Tab
*
*---------------------------------------------------------------------------------------------*/

.acf-field.field_type-tab {
	display: none !important;
}

.acf-tab-group {
	background: transparent;
	border-bottom: #CCCCCC solid 1px;
	margin: 0 0 10px;
	padding: 10px 2px 0 0;
}

.acf-tab-group li {
	font-family: "Open Sans",sans-serif;
	font-size: 23px;
    line-height: 29px;
    margin: 0 8px 0 0;
    
}

.acf-tab-group li a {
	padding: 6px 10px;
	display: block;
	
	color: #555555;
	font-size: 15px;
    font-weight: 700;
    line-height: 24px;
    
    border: #CCCCCC solid 1px;
    border-bottom: 0 none;
    text-decoration: none;
    background: #E4E4E4;
    
}

.acf-tab-group li a:hover, 
.acf-tab-group li.active a {
    background: #FFFFFF;
    outline: none;
}

.acf-tab-group li.active a {
	background: #F1F1F1;
	color: #000;
	border-color: #CCCCCC;
    border-bottom-color: #F7F7F7;
    padding-bottom: 7px;
    margin-bottom: -1px;
}

.hidden-by-tab {
	display: none;
}


/*
*  Box
*/

.acf-postbox.default .acf-tab-group {
	padding-left: 10px;
	background: #F9F9F9;
	border-top: #E8E8E8 solid 1px;
	border-bottom: #E8E8E8 solid 1px;
	margin-bottom: -1px;
}

.acf-postbox.default .acf-tab-group li a {
    background: #F1F1F1;
}

.acf-postbox.default .acf-tab-group li.active a {
	background: #FFFFFF;
}


/*
*  Box (label left)
*/

.acf-table tr.acf-tab-wrap td {
	padding: 0;
	background: #F9F9F9;
	border-top: none;
	border-bottom: none;
}

.acf-table tr.acf-tab-wrap td .acf-tab-group {
	margin-bottom: -1px;
	padding-left: 24%;
}
/* ... */

